Fixed problem with footer height so theres no white space below

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -9,7 +9,7 @@
 @import "pages/home";
 
 #footer {
-  height: 8vh;
+  height: 10vh;
   background: $dark-gray;
   p.copyright {
     font-family: 'Roboto', sans-serif;
