--- a/source/stylesheets/pages/home.css.scss
+++ b/source/stylesheets/pages/home.css.scss
@@ -1,10 +1,7 @@
 @import "variables";
 
-body {
-  border-top: 12px solid $blue;
-}
-
 #main {
+  border-top: 12px solid $blue;
   height: 90vh;
   width: 100vw;
 }
